RESOLVED FIXED81559
LLInt get_by_pname slow path incorrectly assumes that the operands are not constants
https://bugs.webkit.org/show_bug.cgi?id=81559
Summary LLInt get_by_pname slow path incorrectly assumes that the operands are not co...
Filip Pizlo
Reported 2012-03-19 14:01:47 PDT
Patch forthcoming. <rdar://problem/11068789>
Attachments
the patch (1.24 KB, patch)
2012-03-19 14:03 PDT, Filip Pizlo
msaboff: review+
Filip Pizlo
Comment 1 2012-03-19 14:03:55 PDT
Created attachment 132664 [details] the patch
Filip Pizlo
Comment 2 2012-03-19 14:18:54 PDT
Note You need to log in before you can comment on or make changes to this bug.