LLInt get_by_pname slow path incorrectly assumes that the operands are not constants https://bugs.webkit.org/show_bug.cgi?id=81559

Reviewed by Michael Saboff.

* llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):



Canonical link: https://commits.webkit.org/98784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111244 268f45cc-cd09-0410-ab3c-d52691b4dbfc